--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       rel="stylesheet"
       href="./CSS/index.css"
     />
+    <link
+      href="https://unpkg.com/aos@2.3.1/dist/aos.css"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -34,6 +38,13 @@
       <div id="footer"></div>
     </div>
 
-    <script src="/Script/script.js" defer></script>
+    <script
+      src="/Script/script.js"
+      defer
+    ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
